--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "chalk": "^5.3.0",
     "crypto": "^1.0.1",
     "hono": "^4.4.6",
