--- a/.gitignore
+++ b/.gitignore
@@ -19,7 +19,6 @@ lerna-debug.log*
 report.[0-9]_.[0-9]_.[0-9]_.[0-9]_.json
 
 # Runtime data
-
 pids
 _.pid
 _.seed
@@ -173,3 +172,4 @@ dist
 
 # Finder (MacOS) folder config
 .DS_Store
+static/profiles/profile_athena.json
