--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "devDependencies": {
     "@types/bun": "latest",
     "@types/jsonwebtoken": "^9.0.6",
-    "@types/uuid": "^9.0.8"
+    "@types/uuid": "^9.0.8",
+    "ini": "^4.1.3"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "@types/ini": "^4.1.1",
     "axios": "^1.7.2",
     "chalk": "^5.3.0",
     "crypto": "^1.0.1",
