--- a/src/config/config.ini
+++ b/src/config/config.ini
@@ -2,3 +2,8 @@
 
 ; Can be 2, 3, or 4 || SEASON OG STAGES
 RufusStage=4
+
+; WATERLEVEL C2 S3 
+
+; havent implemented this yet lol gotta find eventflags
+WaterLevel=1
