--- a/package.json
+++ b/package.json
@@ -5,15 +5,17 @@
   "devDependencies": {
     "@types/bun": "latest",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/node": "^20.14.4",
     "@types/uuid": "^9.0.8",
     "ini": "^4.1.3"
   },
   "peerDependencies": {
-    "typescript": "^5.0.0"
+    "typescript": "^5.4.5"
   },
   "dependencies": {
     "@types/ini": "^4.1.1",
     "axios": "^1.7.2",
+    "bun-socket": "^0.0.1",
     "chalk": "^5.3.0",
     "crypto": "^1.0.1",
     "hono": "^4.4.6",
