--- a/src/config/config.ini
+++ b/src/config/config.ini
@@ -5,5 +5,5 @@ RufusStage=4
 
 ; WATERLEVEL C2 S3 
 
-; havent implemented this yet lol gotta find eventflags
+; VALUE SHOULD BE 1 - 7
 WaterLevel=1
